# ukui-menus

./: AUTHORS  NEWS  README  autogen.sh  configure.ac
.bzr/branch/: branch.conf  last-revision
.bzr/checkout/: dirstate
.bzr/repository/: pack-names
debian/: .changelog.swp  changelog  control  copyright  gir1.2-ukui-menu.lintian-overrides  libukui-menu-dev.lintian-overrides  libukui-menu2-dbg.lintian-overrides  libukui-menu2.lintian-overrides  libukui-menu2.symbols  python-ukui-menu-dbg.lintian-overrides  python-ukui-menu.lintian-overrides  rules  ukui-menus.lintian-overrides  watch
desktop-directories/: Makefile.am  ukui-android.directory.in
layout/: Makefile.am  ukui-applications.menu  ukui-preferences-categories.menu  ukui-settings.menu
libmenu/: Makefile.am  canonicalize.c  canonicalize.h  desktop-entries.c  desktop-entries.h  entry-directories.c  entry-directories.h  libukui-menu-uninstalled.pc.in  libukui-menu.pc.in  menu-layout.c  menu-layout.h  menu-monitor.c  menu-monitor.h  menu-util.c  menu-util.h  ukuimenu-tree.c  ukuimenu-tree.h
po/: LINGUAS  POTFILES.in  af.po  am.po  an.po  ar.po  as.po  ast.po  be.po  bg.po  bn.po  bn_IN.po  bo.po  br.po  bs.po  ca.po  ca@valencia.po  cmn.po  crh.po  cs.po  cy.po  da.po  de.po  dz.po  el.po  en_AU.po  en_CA.po  en_GB.po  eo.po  es.po  es_CL.po  es_CO.po  es_MX.po  et.po  eu.po  fa.po  fi.po  fr.po  fr_CA.po  frp.po  (+71 more)
python/: Makefile.am  ukuimenu.c
util/: Makefile.am  test-menu-spec.c  ukui-menus-ls.py
